@@ -8,5 +8,4 @@ file systems:
 
 compression:
 * rzip
-* ncompress
 * E00
