@@ -20,6 +20,7 @@ analysis.'''
 
 fsmagic = {
             'gzip':             '\x1f\x8b\x08',     # x08 is the only compression method according to RFC 1952
+            'compress':         '\x1f\x9d',
             'bz2':              'BZh',
             'rar':              'Rar!',
             'zip':              '\x50\x4b\x03\04',
